# Ridge

./: README.md  Ridge.sln
Debug/: Ridge.ilk
Ridge/: CMakeCache.txt  CMakeLists.txt  Makefile  Ridge.vcxproj  main.cpp
Ridge/Debug/: vc141.idb
Ridge/Debug/Ridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ridge.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
